# paperfetch

./: README.md  desktop.ini  fetch.py  fetch_details.py  get_papers.py  main.py  output.csv  pyproject.toml  results.csv
