[project]
name = "get-papers"
version = "0.1.0"
description = "Fetch academic papers using PubMed API"
authors = [
    {name = "Abinaya-2601",email = "sec22ci024@sairamtap.edu.in"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[project.scripts]
get-papers-list = "get_papers.main:main"
[tool.poetry.scripts]
get-papers-list = "get_papers.get_papers:main"
[tool.poetry.scripts]
get-papers-list = "get_papers.main:main"



